fix(plugins/plugin-client-common): experiment tag has wrong color contrast in dark themes
Fixes #5389

--- a/plugins/plugin-client-common/web/css/static/repl.scss
+++ b/plugins/plugin-client-common/web/css/static/repl.scss
@@ -140,7 +140,7 @@
     .kui--tag {
       background-color: var(--color-latency-3);
       font-family: var(--font-sans-serif);
-      color: inherit;
+      color: var(--color-sidecar-background-01);
     }
   }
 }
